[package]
name = "insert-event-resource"
edition = "2021"
publish = false

[dependencies.clippy_utils]
version = "=0.1.84"
git = "https://github.com/rust-lang/rust-clippy"
rev = "81dceed8baf324960ea05e9079b749305b16a7cc"

[package.metadata.rust-analyzer]
# Enables rust-analyzer support for `rustc` crates.
rustc_private = true
